2010-08-24  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline:
	2010-01-14  Alexander Monakov  <amonakov@ispras.ru>

	* sel-sched.c: Add 2010 to copyright years.
	* sel-sched-ir.c: Likewise.
	* sel-sched-ir.h: Likewise.

2010-08-24  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline:
	2010-01-14  Alexander Monakov  <amonakov@ispras.ru>

	* sel-sched-ir.c (sel_restore_other_notes): Rename to sel_restore_notes.
	Update all callers.  Call reemit_notes for all insns.

2010-08-24  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline:
	2010-01-14  Andrey Belevantsev  <abel@ispras.ru>

	PR rtl-optimization/42246
	* sel-sched-ir.h (get_all_loop_exits): Include exits from inner
	loops.

2010-08-24  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline:
	2010-01-14  Andrey Belevantsev  <abel@ispras.ru>

	* sel-sched.c (compute_av_set_at_bb_end): Do not test that number of
	all successors is the same as number of successors in current region.

2010-08-24  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline:
	2010-01-14  Alexander Monakov  <amonakov@ispras.ru>

	* sel-sched.c (maybe_emit_renaming_copy): Exit early when expression
	to rename is not separable.  Otherwise check that its LHS is not NULL.

2010-08-24  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline:
	2010-01-14  Alexander Monakov  <amonakov@ispras.ru>

	* sel-sched.c (choose_best_reg_1):  Loop over all regs for mode.

2010-08-24  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline:
	2010-01-14  Alexander Monakov  <amonakov@ispras.ru>

	* sel-sched.c (mark_unavailable_hard_regs): Do not try to search
	available registers when failed to discover LHS register class.
	Fix indentation.  Update comment.

2010-08-24  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline:
	2010-01-14  Andrey Belevantsev  <abel@ispras.ru>
	    Alexander Monakov  <amonakov@ispras.ru>

	PR rtl-optimization/42389