@@ -1,6 +1,14 @@
 2010-08-24  Andrey Belevantsev <abel@ispras.ru>
 
 	Backport from mainline:
+	2010-08-19  Andrey Belevantsev  <abel@ispras.ru>
+
+	PR rtl-optimization/44691
+	* gfortran.dg/pr44691.f: New test.
+
+2010-08-24  Andrey Belevantsev <abel@ispras.ru>
+
+	Backport from mainline:
 	2010-01-14  Alexander Monakov  <amonakov@ispras.ru>
 
 	PR rtl-optimization/42246
